[package]
name = "vm"
version = "0.1.0"
edition = "2021"

[features]
default = []
tracy = ["dep:tracy-client", "dep:tracing-tracy"]

[dependencies]
# Profiling
tracing-tracy = { version = "0.11.0", optional = true }
tracy-client = { version = "0.17.0", optional = true }
tracing = "0.1.40"

thiserror = "1.0.60"
anyhow = "1.0.83"

[dev-dependencies]
hex-literal = "0.4.1"
